Fixed reseting horizontal scroll... due to # href

--- a/src/components/AddListForm.css
+++ b/src/components/AddListForm.css
@@ -1,17 +1,3 @@
-.board > ul {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
-	list-style: none;
-}
-
-.board > ul > * {
-	margin: 10px;
-	padding: 10px;
-	width: 272px;
-	min-width: 272px;
-}
-
 #addListColumn 
 {
 	background-color: hsla(0,0%,100%,.24);
